--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "gun": "^0.2020.1235",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "tailwindcss": "^2.2.16"
   }
 }
