--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^9.8.7",
     "gun": "^0.2020.1235",
     "postcss": "^7.0.38",
+    "postcss-nested": "^5.0.6",
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.9.7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
