--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 AES_KEY=v2zrdAhB4sFoLmPVP42KS9X7OLsv90XCFKzkMkbA3e5ZZqUKPwKvy2gm
-GUN_PEER=http://167.71.75.218:3030
+GUN_PEER=http://167.71.75.218:3030/gun
